# document-intelligence-refinery

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: agent.mdc
.refinery/: extraction_ledger.jsonl  fact_table.sqlite
.refinery/profiles/: 2013-E.C-Assigned-regular-budget-and-expense.json  2013-E.C-Audit-finding-information.json  2013-E.C-Procurement-information.json  2018_Audited_Financial_Statement_Report.json  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF.json  2019_Audited_Financial_Statement_Report.json  2020_Audited_Financial_Statement_Report.json  2021_Audited_Financial_Statement_Report.json  2022_Audited_Financial_Statement_Report.json  Annual_Report_JUNE-2017.json  Annual_Report_JUNE-2018.json  Annual_Report_JUNE-2019.json  Annual_Report_JUNE-2020.json  Annual_Report_JUNE-2021.json  Annual_Report_JUNE-2022.json  Annual_Report_JUNE-2023.json  Audit Report - 2023.json  CBE ANNUAL REPORT 2023-24.json  CBE Annual Report 2006-7 .json  CBE Annual Report 2008-9 .json  CBE Annual Report 2009-10.json  CBE Annual Report 2010-11.json  (+28 more)
rubric/: extraction_rules.yaml
scripts/: phase0_analyze.py  phase0_docling_run.py  phase0_report_data.py  phase1_triage_corpus.py  phase2_extract_corpus.py  phase3_chunk_and_index.py  phase4_query_agent.py
specs/: _meta.md  api_contracts.md  functional_requirements.md  system_architecture.md  system_requirement_spec.md
src/: __init__.py  config.py  exceptions.py
tests/: conftest.py  test_chunking_indexing.py  test_extraction.py  test_models_schema.py  test_query_agent.py  test_triage.py
(+18 files in other folders)
